--- a/pages/imovel-detalhe.html
+++ b/pages/imovel-detalhe.html
@@ -8,18 +8,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=DM+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container navbar-content">
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <span class="logo-icon">◆</span>
                 <span class="logo-text">Lar<span class="logo-accent">Prime</span></span>
             </a>
             <ul class="nav-links">
-                <li><a href="index.html">Início</a></li>
+                <li><a href="../index.html">Início</a></li>
                 <li><a href="imoveis.html" class="active">Imóveis</a></li>
                 <li><a href="sobre.html">Sobre Nós</a></li>
                 <li><a href="contato.html">Contato</a></li>
@@ -44,7 +44,7 @@
         <div class="container">
             <!-- Breadcrumb -->
             <div style="margin-bottom: 24px; font-size: 0.9rem; color: var(--color-text-muted);">
-                <a href="index.html" style="color: var(--color-text-secondary);">Início</a>
+                <a href="../index.html" style="color: var(--color-text-secondary);">Início</a>
                 <span style="margin: 0 8px;">›</span>
                 <a href="imoveis.html" style="color: var(--color-text-secondary);">Imóveis</a>
                 <span style="margin: 0 8px;">›</span>
@@ -497,7 +497,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <a href="index.html" class="logo">
+                    <a href="../index.html" class="logo">
                         <span class="logo-icon">◆</span>
                         <span class="logo-text">Lar<span class="logo-accent">Prime</span></span>
                     </a>
@@ -513,7 +513,7 @@
                 <div class="footer-links">
                     <h4>Links Rápidos</h4>
                     <ul>
-                        <li><a href="index.html">Início</a></li>
+                        <li><a href="../index.html">Início</a></li>
                         <li><a href="imoveis.html">Imóveis à Venda</a></li>
                         <li><a href="imoveis.html">Imóveis para Alugar</a></li>
                         <li><a href="sobre.html">Sobre Nós</a></li>
@@ -564,7 +564,7 @@
         <span>Tenho Interesse</span>
     </a>
 
-    <script src="script.js"></script>
+    <script src="../assets/js/core/main.js"></script>
     <script>
         // Gallery functionality
         document.querySelectorAll('.gallery-thumb').forEach(thumb => {
