--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -8,18 +8,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=DM+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container navbar-content">
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <span class="logo-icon">◆</span>
                 <span class="logo-text">Lar<span class="logo-accent">Prime</span></span>
             </a>
             <ul class="nav-links">
-                <li><a href="index.html">Início</a></li>
+                <li><a href="../index.html">Início</a></li>
                 <li><a href="imoveis.html">Imóveis</a></li>
                 <li><a href="sobre.html" class="active">Sobre Nós</a></li>
                 <li><a href="contato.html">Contato</a></li>
@@ -330,7 +330,7 @@
         <span>Fale Conosco</span>
     </a>
 
-    <script src="script.js"></script>
+    <script src="../assets/js/core/main.js"></script>
 </body>
 </html>
 
