feat: add dynamic results update during conversation and refinement offer
- Update results dynamically as Luna collects information
- Show results section on index page during conversation
- Add refinement offer message when conversation ends
- Improve closing message to invite user to refine search
- Results update in real-time as user provides information

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="nav-actions">
                 <a href="tel:+5511999999999" class="nav-phone">
                     <i class="fas fa-phone"></i>
-                    <span>(11) 99999-9999</span>
+                    <span>(51) 99999-9999</span>
                 </a>
                 <a href="contato.html" class="btn btn-primary">Fale Conosco</a>
             </div>
@@ -236,7 +236,7 @@
                     <div class="property-content">
                         <div class="property-location">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Jardins, São Paulo - SP</span>
+                            <span>Moinhos de Vento, Porto Alegre - RS</span>
                         </div>
                         <h3 class="property-title">Casa Moderna com Piscina</h3>
                         <p class="ai-insight">
@@ -263,7 +263,7 @@
                         </div>
                         <div class="property-footer">
                             <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
-                            <a href="https://wa.me/5511999999999" class="btn-whatsapp">
+                            <a href="https://wa.me/5551999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
                         </div>
@@ -287,7 +287,7 @@
                     <div class="property-content">
                         <div class="property-location">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Vila Olímpia, São Paulo - SP</span>
+                            <span>Petrópolis, Porto Alegre - RS</span>
                         </div>
                         <h3 class="property-title">Apartamento Alto Padrão</h3>
                         <p class="ai-insight">
@@ -314,7 +314,7 @@
                         </div>
                         <div class="property-footer">
                             <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
-                            <a href="https://wa.me/5511999999999" class="btn-whatsapp">
+                            <a href="https://wa.me/5551999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
                         </div>
@@ -338,7 +338,7 @@
                     <div class="property-content">
                         <div class="property-location">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Pinheiros, São Paulo - SP</span>
+                            <span>Cidade Baixa, Porto Alegre - RS</span>
                         </div>
                         <h3 class="property-title">Studio Moderno Mobiliado</h3>
                         <p class="ai-insight">
@@ -365,7 +365,7 @@
                         </div>
                         <div class="property-footer">
                             <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
-                            <a href="https://wa.me/5511999999999" class="btn-whatsapp">
+                            <a href="https://wa.me/5551999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
                         </div>
@@ -465,7 +465,7 @@
                         <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=100&h=100&fit=crop&crop=face" alt="Camila Ferreira">
                         <div>
                             <strong>Camila Ferreira</strong>
-                            <span>Comprou apartamento em Moema</span>
+                            <span>Comprou apartamento em Moinhos de Vento</span>
                         </div>
                     </div>
                 </div>
@@ -483,7 +483,7 @@
                         <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&h=100&fit=crop&crop=face" alt="Ricardo Gomes">
                         <div>
                             <strong>Ricardo Gomes</strong>
-                            <span>Comprou casa em Alphaville</span>
+                            <span>Comprou casa em Três Figueiras</span>
                         </div>
                     </div>
                 </div>
@@ -520,7 +520,7 @@
                     <i class="fas fa-wand-magic-sparkles"></i>
                     Começar Busca com IA
                 </button>
-                <a href="https://wa.me/5511999999999" class="btn btn-whatsapp-lg">
+                <a href="https://wa.me/5551999999999" class="btn btn-whatsapp-lg">
                     <i class="fab fa-whatsapp"></i>
                     Falar com Consultor
                 </a>
@@ -574,7 +574,7 @@
                     <ul>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Av. Paulista, 1000 - 10º andar<br>São Paulo - SP</span>
+                            <span>Av. Ipiranga, 2000 - 10º andar<br>Porto Alegre - RS</span>
                         </li>
                         <li>
                             <i class="fas fa-phone"></i>
@@ -600,7 +600,7 @@
     </footer>
 
     <!-- WhatsApp Float Button -->
-    <a href="https://wa.me/5511999999999" class="whatsapp-float" aria-label="Fale conosco no WhatsApp">
+                <a href="https://wa.me/5551999999999" class="whatsapp-float" aria-label="Fale conosco no WhatsApp">
         <i class="fab fa-whatsapp"></i>
         <span>Fale Conosco</span>
     </a>
