--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@
                 <!-- Property Card 1 with AI Match -->
                 <article class="property-card property-card-ai">
                     <div class="property-image">
-                        <img src="https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?w=800&h=600&fit=crop" alt="Casa moderna com piscina">
+                        <a href="pages/imovel-detalhe.html" class="property-image-link">
+                            <img src="https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?w=800&h=600&fit=crop" alt="Casa moderna com piscina">
+                        </a>
                         <div class="property-badges">
                             <span class="badge badge-ai">
                                 <i class="fas fa-fire"></i> Popular
@@ -228,7 +230,7 @@
                             <i class="fas fa-chart-line"></i>
                             <span>Alto interesse</span>
                         </div>
-                        <button class="property-favorite" aria-label="Favoritar">
+                        <button class="property-favorite" aria-label="Favoritar" onclick="event.stopPropagation(); event.preventDefault();">
                             <i class="far fa-heart"></i>
                         </button>
                         <div class="property-price">R$ 1.250.000</div>
@@ -273,13 +275,15 @@
                 <!-- Property Card 2 -->
                 <article class="property-card property-card-ai">
                     <div class="property-image">
-                        <img src="https://images.unsplash.com/photo-1502672260266-1c1ef2d93688?w=800&h=600&fit=crop" alt="Apartamento de luxo">
+                        <a href="pages/imovel-detalhe.html" class="property-image-link">
+                            <img src="https://images.unsplash.com/photo-1502672260266-1c1ef2d93688?w=800&h=600&fit=crop" alt="Apartamento de luxo">
+                        </a>
                         <div class="property-badges">
                             <span class="badge badge-ai-best">
                                 <i class="fas fa-trophy"></i> Melhor custo-benefício
                             </span>
                         </div>
-                        <button class="property-favorite" aria-label="Favoritar">
+                        <button class="property-favorite" aria-label="Favoritar" onclick="event.stopPropagation(); event.preventDefault();">
                             <i class="far fa-heart"></i>
                         </button>
                         <div class="property-price">R$ 890.000</div>
@@ -324,13 +328,15 @@
                 <!-- Property Card 3 -->
                 <article class="property-card property-card-ai">
                     <div class="property-image">
-                        <img src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?w=800&h=600&fit=crop" alt="Studio moderno">
+                        <a href="pages/imovel-detalhe.html" class="property-image-link">
+                            <img src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?w=800&h=600&fit=crop" alt="Studio moderno">
+                        </a>
                         <div class="property-badges">
                             <span class="badge badge-ai-invest">
                                 <i class="fas fa-chart-pie"></i> Ótimo p/ investir
                             </span>
                         </div>
-                        <button class="property-favorite" aria-label="Favoritar">
+                        <button class="property-favorite" aria-label="Favoritar" onclick="event.stopPropagation(); event.preventDefault();">
                             <i class="far fa-heart"></i>
                         </button>
                         <div class="property-price">R$ 420.000</div>
