feat: add admin leads link to main navigation menu

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <li><a href="pages/imoveis.html">Imóveis</a></li>
                 <li><a href="pages/sobre.html">Sobre Nós</a></li>
                 <li><a href="pages/contato.html">Contato</a></li>
+                <li><a href="pages/admin-leads.html" style="color: var(--color-primary); font-weight: 600;">
+                    <i class="fas fa-chart-line"></i> Admin
+                </a></li>
             </ul>
             <div class="nav-actions">
                 <a href="tel:+5511999999999" class="nav-phone">
@@ -380,7 +383,7 @@
             </div>
 
             <div class="section-cta">
-                <a href="imoveis.html" class="btn btn-primary btn-lg">
+                <a href="pages/imoveis.html" class="btn btn-primary btn-lg">
                     Ver Todos os Imóveis
                     <i class="fas fa-arrow-right"></i>
                 </a>
