fix: correct paths to imovel-detalhe.html for GitHub Pages
- Fix links in filter.js to use pages/imovel-detalhe.html
- Fix links in index.html to use pages/imovel-detalhe.html
- Fix links in search.js to use pages/imovel-detalhe.html
- All links now correctly point to pages/imovel-detalhe.html

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                             </div>
                         </div>
                         <div class="property-footer">
-                            <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="pages/imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
                             <a href="https://wa.me/5551999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
@@ -320,7 +320,7 @@
                             </div>
                         </div>
                         <div class="property-footer">
-                            <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="pages/imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
                             <a href="https://wa.me/5551999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
@@ -373,7 +373,7 @@
                             </div>
                         </div>
                         <div class="property-footer">
-                            <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="pages/imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
                             <a href="https://wa.me/5551999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
