--- a/pages/imoveis.html
+++ b/pages/imoveis.html
@@ -137,7 +137,7 @@
                             </div>
                         </div>
                         <div class="property-footer">
-                            <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="imovel-detalhe.html?id=" class="btn btn-outline">Ver Detalhes</a>
                             <a href="https://wa.me/5511999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
@@ -182,7 +182,7 @@
                             </div>
                         </div>
                         <div class="property-footer">
-                            <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="imovel-detalhe.html?id=" class="btn btn-outline">Ver Detalhes</a>
                             <a href="https://wa.me/5511999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
@@ -227,7 +227,7 @@
                             </div>
                         </div>
                         <div class="property-footer">
-                            <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="imovel-detalhe.html?id=" class="btn btn-outline">Ver Detalhes</a>
                             <a href="https://wa.me/5511999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
@@ -272,7 +272,7 @@
                             </div>
                         </div>
                         <div class="property-footer">
-                            <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="imovel-detalhe.html?id=" class="btn btn-outline">Ver Detalhes</a>
                             <a href="https://wa.me/5511999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
@@ -314,7 +314,7 @@
                             </div>
                         </div>
                         <div class="property-footer">
-                            <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="imovel-detalhe.html?id=" class="btn btn-outline">Ver Detalhes</a>
                             <a href="https://wa.me/5511999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
@@ -359,7 +359,7 @@
                             </div>
                         </div>
                         <div class="property-footer">
-                            <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="imovel-detalhe.html?id=" class="btn btn-outline">Ver Detalhes</a>
                             <a href="https://wa.me/5511999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
@@ -401,7 +401,7 @@
                             </div>
                         </div>
                         <div class="property-footer">
-                            <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="imovel-detalhe.html?id=" class="btn btn-outline">Ver Detalhes</a>
                             <a href="https://wa.me/5511999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
@@ -446,7 +446,7 @@
                             </div>
                         </div>
                         <div class="property-footer">
-                            <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="imovel-detalhe.html?id=" class="btn btn-outline">Ver Detalhes</a>
                             <a href="https://wa.me/5511999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
@@ -491,7 +491,7 @@
                             </div>
                         </div>
                         <div class="property-footer">
-                            <a href="imovel-detalhe.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="imovel-detalhe.html?id=" class="btn btn-outline">Ver Detalhes</a>
                             <a href="https://wa.me/5511999999999" class="btn-whatsapp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
