--- a/imovel-detalhe.html
+++ b/imovel-detalhe.html
@@ -2,15 +2,17 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=pages/imovel-detalhe.html">
-    <script>
-        // Redirect to correct path
-        const currentUrl = window.location.href;
-        const urlParams = window.location.search;
-        const newUrl = currentUrl.replace('/imovel-detalhe.html', '/pages/imovel-detalhe.html') + urlParams;
-        window.location.replace(newUrl);
-    </script>
     <title>Redirecionando...</title>
+    <script>
+        // Redirect to correct path preserving URL parameters
+        (function() {
+            const urlParams = window.location.search;
+            const hash = window.location.hash;
+            const newUrl = 'pages/imovel-detalhe.html' + urlParams + hash;
+            window.location.replace(newUrl);
+        })();
+    </script>
+    <meta http-equiv="refresh" content="0; url=pages/imovel-detalhe.html">
 </head>
 <body>
     <p>Redirecionando para a página correta... <a href="pages/imovel-detalhe.html">Clique aqui se não for redirecionado automaticamente</a></p>
