--- a/index.html
+++ b/index.html
@@ -622,6 +622,7 @@
 
     <script src="assets/js/core/main.js"></script>
     <script src="assets/js/ai/search.js"></script>
+    <script src="assets/js/ai/criteria-extractor.js"></script>
     <script src="assets/js/ai/conversation-engine.js"></script>
     <script src="assets/js/ai/lead-capture.js"></script>
 </body>
