--- a/pages/admin-leads.html
+++ b/pages/admin-leads.html
@@ -349,13 +349,12 @@
                 return;
             }
             
-            // Sort leads by score (highest first) and then by date (newest first)
+            // FIXED: Sort leads by date (newest first) - always prioritize most recent
             const sortedLeads = [...leads].sort((a, b) => {
-                const scoreDiff = (b.qualityScore || 0) - (a.qualityScore || 0);
-                if (scoreDiff !== 0) return scoreDiff;
-                const dateA = new Date(a.timestamp || a.startedAt || 0);
-                const dateB = new Date(b.timestamp || b.startedAt || 0);
-                return dateB - dateA;
+                // Always sort by date (newest first)
+                const dateA = new Date(a.timestamp || a.startedAt || a.completedAt || 0);
+                const dateB = new Date(b.timestamp || b.startedAt || b.completedAt || 0);
+                return dateB - dateA; // Most recent first
             });
             
             tbody.innerHTML = sortedLeads.map((lead, index) => {
