--- a/pages/admin-leads.html
+++ b/pages/admin-leads.html
@@ -265,8 +265,8 @@
                     <div class="value" id="avg-score">0</div>
                 </div>
                 <div class="stat-card">
-                    <h3>Taxa Conversão</h3>
-                    <div class="value" id="conversion-rate">0%</div>
+                    <h3>Leads com Contato</h3>
+                    <div class="value" id="leads-with-contact">0</div>
                 </div>
             </div>
 
@@ -326,12 +326,11 @@
                 ? Math.round(leads.reduce((sum, l) => sum + (l.qualityScore || 0), 0) / leads.length)
                 : 0;
             const withContact = leads.filter(l => l.phone || l.email).length;
-            const conversionRate = total > 0 ? Math.round((withContact / total) * 100) : 0;
             
             document.getElementById('total-leads').textContent = total;
             document.getElementById('today-leads').textContent = today;
             document.getElementById('avg-score').textContent = avgScore;
-            document.getElementById('conversion-rate').textContent = conversionRate + '%';
+            document.getElementById('leads-with-contact').textContent = withContact;
         }
         
         function renderLeads() {
